Fix HTML layout issue, add basic console log of API info

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,6 @@
 .sidebar {
   background-color: red;
+  float: left;
 }
 
 .searchrow {
